# apple

./: .cspell.json  .dvcignore  .envrc  .gitattributes  .gitignore  .lfsconfig  .mega-linter.yml  .ruff.toml  404.html  CHANGELOG.md  Justfile  README.md  cell-neighbors.vtu  denotation.md  index.html  mkdocs.yaml  noxfile.py  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml  test_svd.py  zensical.toml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.config/mise/: config.toml
.config/mise/conf.d/: 99-custom.toml
.config/mise/tasks/: gen-warp-stubs.sh  test.sh
.config/mise/tasks/stubgen/: ipctk.sh
.dvc/: config
.github/copier/: .copier-answers.python.yaml  .copier-answers.share.yaml  mkdocs.yaml
.github/workflows/: bench.yaml  docs.yaml  mega-linter.yaml  test.yaml
SUMMARY/: index.html
api/SUMMARY/: index.html
api/liblaf/apple/: index.html
api/liblaf/apple/abstract/: index.html
api/liblaf/apple/constitution/: index.html
api/liblaf/apple/creation/: index.html
api/liblaf/apple/elem/: index.html
api/liblaf/apple/energy/: index.html
api/liblaf/apple/func/: index.html
api/liblaf/apple/jax/: index.html
api/liblaf/apple/material/: index.html
api/liblaf/apple/math/: index.html
api/liblaf/apple/naive/: index.html
api/liblaf/apple/opt/: index.html
api/liblaf/apple/optim/: index.html
api/liblaf/apple/physics/: index.html
api/liblaf/apple/problem/: index.html
api/liblaf/apple/region/: index.html
api/liblaf/apple/testing/: index.html
api/liblaf/apple/typed/: index.html
api/liblaf/apple/types/: index.html
api/liblaf/apple/utils/: index.html
assets/javascripts/: bundle.13a4f30d.min.js
benches/: bench_pncg_branching_backends.py  conftest.py  test_aggregation.py  test_arap.py  test_dot.py  test_segment_sum.py
denotation/: index.html
design/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/SUMMARY/: index.html
dev/api/SUMMARY/: index.html
dev/api/liblaf/apple/: index.html
dev/search/: search_index.json
docs/: README.md  denotation.md  design.md  pncg-solver.md
docs/ai-plan/: 2026-03-18.md
docs/formula/: current.md  denotations.md  inverse.md  plan.md
docs/javascripts/: katex.js
docs/reference/liblaf/apple/: README.md
docs/todo/: sliding.md
examples/dynamics/: arap.py  bunny.py  collision.py  free-falling.py  gravity.py
examples/dynamics/collision/collision-box/: main.py
examples/dynamics/collision/collision-bunny/: main.py
examples/dynamics/collision/collision-bunny-bunny/: main.py
examples/dynamics/collision/collision-bunny-sphere/: main.py
examples/dynamics/collision/inter-collision/: main.py
examples/dynamics/free-falling/: main.py
examples/phace/close-mouth/: main.py
examples/phace/collide-ball/: main.py
examples/phace/dynamics/: main.py
examples/phace/grin/: main.py
examples/phace/open-mouth/: main.py
examples/phace/wind/: main.py
examples/static/: random.py  stretch.py
examples/static/random/: main.py
exp/forward/src/: 00-gen-bunny.py  00-gen.py  01-simulate-naive.py  01-simulate.py  02-dynamics-move.py  02-dynamics.py
exp/inverse-cloth/src/: 00-gen.py  01-simulate.py  02-inverse.py
exp/inverse-physics/src/: 00-gen.py  01-simulate.py  02-inverse.py
exp/inverse-solid-body/src/: 00-gen.py  01-simulate.py
exp/phace/scripts/: 00-animation.sh
exp/phace/src/: 00-gen-activation.py  01-simulate.py
exp/phacs-dynamics/src/: 00-gen.py
formula/current/: index.html
formula/denotations/: index.html
formula/inverse/: index.html
formula/plan/: index.html
marimo/: deformation-gradient.py  gradients.py  hess-quad.py
notebooks/: diff.ipynb
reference/liblaf/apple/: index.html
search/: search_index.json
src/liblaf/apple/: __init__.pyi
tests/: conftest.py
tests/abstract/: test_linear_operator.py
tests/benchmark/: test_potential.py
tests/elem/tetra/: conftest.py  test_deformation_gradient_jac.py  test_fem.py  test_mass.py  test_strain.py
tests/elem/triangle/: conftest.py  test_fundamental_forms.py
tests/forward/: test_static_simulation.py
tests/func/strain/: test_h3_diag.py  test_h4_diag.py  test_h5_diag.py  test_hess_diag.py  test_utils.py
tests/jax/math/: test_autodiff.py  test_polar_rv.py  test_rotation.py  test_svd_rv.py
tests/material/tetra/: test_material_tetra.py  test_material_tetra_element.py
tests/math/: test_hess.py  test_jac.py  test_linear_operator.py  test_rotation.py
tests/model/: test_corotational.py  test_forward.py  test_inverse.py  test_neo_hookean.py  test_pncg.py  test_stable_neo_hookean.py
tests/opt/minimize/: test_pncg.py  test_scipy.py
tests/optim/: test_pncg.py  test_scipy.py
tests/sim/region/: test_region_tetra.py
tests/warp/math/: test_rotation.py
typings/_warp/: __init__.pyi  _bultins.pyi  context.pyi  jax.pyi  types.pyi
typings/cytoolz/: __init__.pyi  dicttoolz.pyi  functoolz.pyi  itertoolz.pyi
typings/ipctk/: __init__.pyi  filib.pyi  ogc.pyi  tight_inclusion.pyi
typings/warp/: __init__.pyi  autograd.pyi  build.pyi  build_dll.pyi  builtins.pyi  codegen.pyi  config.pyi  constants.pyi  context.pyi  dlpack.pyi  fabric.pyi  jax.pyi  math.pyi  paddle.pyi  sparse.pyi  tape.pyi  torch.pyi  types.pyi  utils.pyi
typings/warp/examples/: __init__.pyi  browse.pyi
typings/warp/fem/: __init__.pyi  adaptivity.pyi  cache.pyi  dirichlet.pyi  domain.pyi  integrate.pyi  linalg.pyi  operator.pyi  polynomial.pyi  types.pyi  utils.pyi
typings/warp/jax_experimental/: __init__.pyi  custom_call.pyi  ffi.pyi  xla_ffi.pyi
typings/warp/optim/: __init__.pyi  adam.pyi  linear.pyi  sgd.pyi
typings/warp/render/: __init__.pyi  render_opengl.pyi  render_usd.pyi  utils.pyi
typings/warp/sim/: __init__.pyi  articulation.pyi  collide.pyi  graph_coloring.pyi  import_mjcf.pyi  import_snu.pyi  import_urdf.pyi  import_usd.pyi  inertia.pyi  integrator.pyi  integrator_euler.pyi  integrator_featherstone.pyi  integrator_vbd.pyi  integrator_xpbd.pyi  model.pyi  particles.pyi  render.pyi  utils.pyi
(+3008 files in other folders)
