# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "liblaf-apple"
description = "🍎 A JAX and Warp library for differentiable physics simulation, featuring elastic energy models and finite element methods."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" }
]
keywords = []
classifiers = [
  # ref: <https://pypi.org/classifiers/>
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed"
]
dependencies = [
  "einops>=0.8",
  "equinox>=0.13",
  "felupe>=10",
  "frozendict>=2",
  "jarp>=0.1.8",
  "jax>=0.9",
  "jaxtyping>=0.3",
  "lazy-loader>=0.1",
  "liblaf-grapes>=9",
  "liblaf-melon>=1",
  "liblaf-peach>=0.9.3",
  "lineax>=0.1",
  "numpy>=2.2",
  "optax>=0.2",
  "pyvista>=0.47",
  "rich>=14",
  "scipy>=1.17",
  "warp-lang>1",
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://github.com/liblaf/apple/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf-apple.readthedocs.io/"
"Homepage" = "https://github.com/liblaf/apple"
"Issue Tracker" = "https://github.com/liblaf/apple/issues"
"Release Notes" = "https://github.com/liblaf/apple/releases"
"Source Code" = "https://github.com/liblaf/apple"

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.9", "liblaf-peach[cuda12]>=0.9"]
cuda13 = ["jax[cuda13]>=0.9", "liblaf-peach[cuda13]>=0.9"]

[dependency-groups]
dev = [
  "icecream>=2.1.10",
  "ipykernel>=7",
  "liblaf-cherries>=1",
  "pygame>=2.6.1",
  "sympy>=1",
  "viztracer>=1",
]
build = ["check-wheel-contents>=0.6", "hatch>=1", "twine>=6"]
docs = ["liblaf-mkdocs-preset>=0.2", "mkdocs>=1,<2"]
lint = ["import-linter[ui]>=2", "ruff>=0.15"]
nox = ["liblaf-nox-recipes>=0.1", "nox>=2026"]
test = ["hypothesis>=6", "pytest>=9", "pytest-cov>=7", "pytest-randomly>=4"]
typing = ["scipy-stubs>=1"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.report]
exclude_also = ["@wp.func", "@wp.kernel"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/liblaf/apple/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/liblaf"]

[tool.hatch.version]
source = "vcs"

[tool.importlinter]
root_package = "liblaf.apple"

[[tool.importlinter.contracts]]
ancestors = ["liblaf.apple"]
name = "Acyclic siblings"
type = "acyclic_siblings"

[tool.pyright]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/exp/2024",
  "**/exp/2025/04",
  "**/exp/2025/05",
  "**/exp/2025/06",
  "**/exp/2025/07",
  "**/exp/2025/08",
  "**/exp/2025/09",
  "**/exp/2025/10/29",
  "**/marimo",
  "**/node_modules",
  ".venv"
]
extends = ".config/linters/pyrightconfig.json"
reportInvalidTypeForm = "none"

[tool.pytest]
addopts = [
  "--doctest-modules",
  "--import-mode=importlib",
  "--junitxml=junit.xml",
  "--showlocals"
]
consider_namespace_packages = true
junit_family = "legacy"
strict = true
testpaths = ["benches", "src", "tests"]

[tool.ruff]
exclude = ["**/marimo/"]
extend = ".config/linters/.ruff.toml"

[tool.ruff.lint]
exclude = ["**/.*/"]
ignore = [
  "ANN201",
  "ANN202",
  "F722",
  "N802",
  "N803",
  "N806",
  "N815",
  "PLR0913",
  "RUF002"
]

[tool.ty.environment]
python = ".venv"

[tool.uv]
default-groups = "all"

[tool.uv.sources]
liblaf-peach = { path = "../peach", editable = true }
