# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "liblaf-apple"
description = "🍎 A JAX and Warp library for differentiable physics simulation, featuring elastic energy models and finite element methods."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" }
]
keywords = []
classifiers = [
  # ref: <https://pypi.org/classifiers/>
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed"
]
dependencies = [
  "einops>=0.8",
  "equinox>=0.13",
  "felupe>=10",
  "frozendict>=2",
  "ipctk>=1.5.0",
  "jax>=0.10",
  "jaxtyping>=0.3",
  "lazy-loader>=0.1",
  "liblaf-grapes>=9",
  "liblaf-jarp>=0.2",
  "liblaf-melon>=1",
  "liblaf-peach>=0.9.3",
  "lineax>=0.1",
  "numpy>=2.2",
  "optax>=0.2",
  "pyvista>=0.47",
  "rich>=14",
  "scipy>=1.17",
  "warp-lang>1",
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://github.com/liblaf/apple/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf-apple.readthedocs.io/"
"Homepage" = "https://github.com/liblaf/apple"
"Issue Tracker" = "https://github.com/liblaf/apple/issues"
"Release Notes" = "https://github.com/liblaf/apple/releases"
"Source Code" = "https://github.com/liblaf/apple"

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.10", "liblaf-peach[cuda12]>=0.9"]
cuda13 = ["jax[cuda13]>=0.10", "liblaf-peach[cuda13]>=0.9"]

[dependency-groups]
dev = [
  "icecream>=2.1.10",
  "ipykernel>=7",
  "liblaf-cherries>=1",
  "pygame>=2.6.1",
  "sympy>=1",
  "torch>=2.11.0",
  "viztracer>=1",
]
build = ["check-wheel-contents>=0.6", "hatch>=1", "twine>=6"]
docs = [
  "griffe-fieldz>=0.5",
  "griffe-inherited-docstrings>=1",
  "griffe-pydantic>=1",
  "griffe-warnings-deprecated>=1",
  "mkdocstrings[python]>=1",
  "zensical>=0.0.41"
]
lint = ["import-linter[ui]>=2", "ruff>=0.15"]
nox = ["liblaf-nox-recipes>=0.1", "nox>=2026", "nox-uv>=0.7"]
test = [
  "hypothesis>=6",
  "pytest>=9",
  "pytest-codspeed>=4.5.0",
  "pytest-cov>=7",
  "pytest-randomly>=4",
  { include-group = "dev" },
]
typing = [
  "mypy>=2.1.0",
  "pybind11-stubgen>=2.5.5",
  "scipy-stubs>=1",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.report]
exclude_also = ["@wp.func", "@wp.kernel"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/liblaf/apple/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/liblaf"]

[tool.hatch.version]
source = "vcs"

[tool.importlinter]
root_package = "liblaf.apple"

[[tool.importlinter.contracts]]
ancestors = ["liblaf.apple"]
name = "Acyclic siblings"
type = "acyclic_siblings"
ignore_imports = [
  "liblaf.apple.jax.fem.geometry._geometry -> liblaf.apple.jax.fem.geometry._tetra",
  "liblaf.apple.jax.fem.geometry._geometry -> liblaf.apple.jax.fem.geometry._triangle"
]

[tool.pytest]
addopts = [
  "--doctest-modules",
  "--import-mode=importlib",
  "--junitxml=junit.xml",
  "--showlocals"
]
consider_namespace_packages = true
junit_family = "legacy"
strict = true
testpaths = ["benches", "src", "tests"]

[tool.ruff]
exclude = ["**/marimo/"]
extend = ".config/linters/.ruff.toml"

[tool.ruff.lint]
exclude = ["**/.*/", "typings/ipctk/*.pyi"]
ignore = [
  "ANN201",
  "ANN202",
  "F722",
  "N802",
  "N803",
  "N806",
  "N815",
  "PLR0913",
  "RUF002"
]

[tool.ty.environment]
extra-paths = ["typings"]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
liblaf-peach = { editable = true, path = "../peach" }
ipctk = { git = "https://github.com/ipc-sim/ipc-toolkit.git" }
