# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "liblaf-apple"
description = "🍎 A JAX and Warp library for differentiable physics simulation, featuring elastic energy models and finite element methods."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" }
]
keywords = []
classifiers = [
  # ref: <https://pypi.org/classifiers/>
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed"
]
dependencies = [
  "einops>=0.8",
  "felupe>=10",
  "ipctk>=1.5.0",
  "jaxtyping>=0.3",
  "lazy-loader>=0.1",
  "liblaf-melon>=1",
  "liblaf-peach>=0.10",
  "numpy>=2.3.2",
  "pyvista>=0.47",
  "torch>=2.11.0",
  "warp-lang>=1.13"
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://github.com/liblaf/apple/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf-apple.readthedocs.io/"
"Homepage" = "https://github.com/liblaf/apple"
"Issue Tracker" = "https://github.com/liblaf/apple/issues"
"Release Notes" = "https://github.com/liblaf/apple/releases"
"Source Code" = "https://github.com/liblaf/apple"

[dependency-groups]
dev = [
  "icecream>=2.1.10",
  "ipykernel>=7",
  "liblaf-cherries>=1",
  "liblaf-grapes>=9",
  "pygame>=2.6.1",
  "sympy>=1",
  "viztracer>=1"
]
build = ["check-wheel-contents>=0.6", "hatch>=1", "twine>=6"]
docs = [
  "griffe-fieldz>=0.5",
  "griffe-inherited-docstrings>=1",
  "griffe-pydantic>=1",
  "griffe-warnings-deprecated>=1",
  "mkdocstrings[python]>=1",
  "zensical>=0.0.43"
]
lint = ["import-linter[ui]>=2", "ruff>=0.15"]
nox = ["liblaf-nox-recipes>=0.1", "nox>=2026", "nox-uv>=0.7"]
test = [
  "hypothesis>=6",
  "pytest>=9",
  "pytest-codspeed>=4.5.0",
  "pytest-cov>=7",
  "pytest-randomly>=4",
  { include-group = "dev" },
]
typing = [
  "ipctk-stubs>=1",
  "mypy>=2.1.0",
  "pybind11-stubgen>=2.5.5",
  "scipy-stubs>=1"
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.report]
exclude_also = ["@wp.func", "@wp.kernel"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/liblaf/apple/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/liblaf"]

[tool.hatch.version]
source = "vcs"

[tool.importlinter]
root_package = "liblaf.apple"

[[tool.importlinter.contracts]]
ancestors = ["liblaf.apple"]
name = "Acyclic siblings"
type = "acyclic_siblings"

[tool.pytest]
addopts = [
  "--doctest-modules",
  "--import-mode=importlib",
  "--junitxml=junit.xml",
  "--showlocals"
]
consider_namespace_packages = true
junit_family = "legacy"
strict = true
testpaths = ["benches", "src", "tests"]

[tool.ruff]
exclude = ["**/marimo/"]
extend = ".config/linters/.ruff.toml"

[tool.ruff.lint]
exclude = ["**/.*/", "typings/ipctk/*.pyi"]
ignore = [
  "ANN201",
  "ANN202",
  "F722",
  "N802",
  "N803",
  "N806",
  "N815",
  "PLR0913",
  "RUF002"
]

[tool.ty.environment]
extra-paths = ["typings"]

[tool.uv]
default-groups = "all"

[[tool.uv.index]]
name = "ipctk"
url = "https://liblaf.github.io/mirrors-ipc-toolkit/simple/"

[tool.uv.sources]
ipctk = { index = "ipctk" }
ipctk-stubs = { index = "ipctk" }
